force-app/main/default/objects/Dynamic_Table_Error_Log__c/Dynamic_Table_Error_Log__c.object-meta.xml
<CustomObject>
    <description>Stores sanitized unexpected backend exception details for debugging without exposing raw details to the UI.</description>
    <label>Dynamic Table Error Log</label>
    <nameField>
        <displayFormat>ERR-{0000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Table Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>