force-app/main/default/objects/Dynamic_Table_Error_Log__c/fields/Context_JSON__c.field-meta.xml
<CustomField>
    <fullName>Context_JSON__c</fullName>
    <label>Context JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>