force-app/main/default/objects/Dynamic_Table_Error_Log__c/fields/Error_Reference__c.field-meta.xml
<CustomField>
    <fullName>Error_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Error Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>