force-app/main/default/objects/Dynamic_Table_Error_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>